[project]
name = "lolstonksrss"
version = "1.0.0"
description = "A production-ready RSS feed generator for League of Legends news"
authors = [
    { name = "LoL Stonks RSS Contributors" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["rss", "league-of-legends", "news", "feed", "riot-games"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: News/Diary",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastapi>=0.109.1",
    "uvicorn[standard]>=0.24.0",
    "feedgen>=1.0.0",
    "feedparser>=6.0.11",
    "httpx>=0.25.2",
    "aiosqlite>=0.19.0",
    "pydantic>=2.5.2",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.4",
    "cachetools>=5.3.2",
    "python-dateutil>=2.8.2",
    "slowapi>=0.1.9",
    "jinja2>=3.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=24.3.0",
    "mypy>=1.7.1",
    "ruff>=0.1.7",
    "psutil>=5.9.0",
]
docs = [
    "mkdocs-material>=9.5.3",
    "mkdocs-git-revision-date-localized-plugin>=1.2.2",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-rss-plugin>=1.12.0",
    "pillow>=10.1.0",
    "cairosvg>=2.7.1",
]

[project.urls]
Homepage = "https://github.com/yourusername/lolstonksrss"
Documentation = "https://github.com/yourusername/lolstonksrss/blob/main/README.md"
Repository = "https://github.com/yourusername/lolstonksrss"
Issues = "https://github.com/yourusername/lolstonksrss/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "UP017", # Use datetime.UTC (Python 3.11+ only, for 3.10 compatibility)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.uv]
dev-dependencies = [
    "bandit>=1.9.2",
    "pip-audit>=2.10.0",
    "safety>=3.2.4",
]
